--- a/static/css/Estilos.css
+++ b/static/css/Estilos.css
@@ -21,9 +21,13 @@ img{
 
  
 .navbar>.container-fluid{
-  padding-left: 35px;
+  /* padding-left: 35%;  */
+  padding-left: 3.5%;
 }
 
+h1, h2{
+  text-transform: uppercase;
+}
 
 
 .bg-color {
@@ -31,7 +35,9 @@ img{
   /* background-color: rgba(var(--bs-danger-rgb),var(--bs-bg-opacity))!important; */
   background-color:#448bd1!important;
 }
-
+.navbar-brand {
+  color: black;
+}
 
 
 #EFECTO
@@ -50,10 +56,55 @@ img{
 }
 .navbar-brand:hover {
   box-shadow: inset 0 0 20px rgb(255, 255, 255), 0 0 20px rgb(255, 255, 255);
-  outline-color: rgba(49, 138, 172, 0);
+  outline-color: white;
   outline-offset: 80px;
   text-shadow: 1px 1px 6px #ffff; 
+  color: white;
 }
+
+
+
+
+
+
+/* CARDS */
+.cards {
+  width: 100%; 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 30%; 
+  opacity: 0.75;
+}
+
+.card1 { 
+  width: 35%;
+  height: 20vw; 
+  text-align: center;  
+  box-shadow: 1px 1px 1px 1px black;
+  background-color:white;
+  color: black;
+}
+.card2 { 
+  width: 35%;
+  height: 20vw; 
+  text-align: center;  
+  box-shadow: 1px 1px 1px 1px black;
+  background-color:white;
+  color: black;
+}
+.card3 { 
+  width: 20%;
+  height: 15vw; 
+  text-align: center; 
+  box-shadow: 1px 1px 1px 1px black;
+  background-color:white;
+  color: black;
+}
+
+
+
+ 
  
 
 .intrucciones{
@@ -158,17 +209,27 @@ html {
   }
   body {
     margin: 0;
-    margin-bottom: 150px;
+    /* margin-bottom: 150px; */
+    width: 100%;
+    /* height: 40rem; */
+    /* border: 1px solid #000000; */
+    /* box-shadow: 0px 4px 10px 10px rgba(12, 18, 72, 0.25); */
+    background-size: 100% 100%;
+    background-image: url('../img/Logo.png');
+    background-repeat: no-repeat;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
   }
 
 footer {
-    /* margin-top: 300px; */
+    margin-top: 1vw;
     background-color: #448bd1;
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 15%;
-    color: white;
+    color: black;
   }
 
 footer p{
