--- a/static/css/Estilos.css
+++ b/static/css/Estilos.css
@@ -37,6 +37,7 @@ h1, h2{
 }
 .navbar-brand {
   color: black;
+  font-family: 'Kanit', sans-serif;
 }
 
 
@@ -75,6 +76,7 @@ h1, h2{
   justify-content: space-around;
   height: 30%; 
   opacity: 0.75;
+  font-family: 'Cabin', sans-serif;
 }
 
 .card1 { 
@@ -108,7 +110,10 @@ textarea{
   color: black;
 }
  
- 
+.btn{
+  font-family: 'Kanit', sans-serif;
+}
+
 
 .intrucciones{
   width: 50%;
@@ -117,13 +122,14 @@ textarea{
 
 
 .form-control{
-  width: 50%;
+  width: 100%;
 }
 
 /* Titulo */
 h1{
     margin-top: 3%;
     text-align: center;
+    font-family: 'Kanit', sans-serif;
 }
 
 #busqueda button{
@@ -211,18 +217,11 @@ html {
     position: relative;
   }
   body {
-    margin: 0;
-    /* margin-bottom: 150px; */
-    width: 100%;
-    /* height: 40rem; */
-    /* border: 1px solid #000000; */
-    /* box-shadow: 0px 4px 10px 10px rgba(12, 18, 72, 0.25); */
+    margin: 0; 
+    width: 100%; 
     background-size: 100% 100%;
     background-image: url('../img/Logo.png');
-    background-repeat: no-repeat;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    background-repeat: no-repeat; 
   }
 
 footer {
@@ -233,12 +232,44 @@ footer {
     width: 100%;
     height: 15%;
     color: black;
+    font-family: 'Kanit', sans-serif;
+    
   }
 
 footer p{
   margin-top: 2%;
   text-align: center;
 }
+
+
+
+.formulario_subir{
+  margin: 0 auto;
+  width: 50%;
+}
+
+
+
+.combo{
+  margin: 0 auto;
+  width: 50%;
+}
+.form-select {
+  border: 1px solid black; 
+  width: 20%;
+}
+
+option{
+  /* background-color: #448bd1; */
+  color: black;
+}
+
+
+
+
+
+
+
 
 
 
