--- a/static/css/Estilos.css
+++ b/static/css/Estilos.css
@@ -220,7 +220,7 @@ html {
     margin: 0; 
     width: 100%; 
     background-size: 100% 100%;
-    background-image: url('../img/Logo.png');
+    background-image: url('../img/crazy-auron.gif');
     background-repeat: no-repeat; 
   }
 
